# safepila

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  start-all.bat  start-backend.bat  start-frontend.bat
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml
backend/app/: main.py  schemas.py
backend/app/api/: validate.py
backend/app/core/: config.py  report.py  validator.py
backend/app/tests/: test_validator.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: DropZone.tsx  FlagsModal.tsx  ProgressBar.tsx  ResultCard.tsx
frontend/src/types/: index.ts
